--- a/html/configurer_menu.html
+++ b/html/configurer_menu.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Конфигуратор ноутбуков</title>
+    <title>DIYLaptops: Конфигуратор ноутбуков</title>
     <meta charset="utf-8">
     <meta name="description" content="Build your onw perfect laptop with us!">
     <meta name="keywords" content="laptop, diy, computer, ноутук, ноут, для работы, ноутбуки на заказ, продам гараж">
