--- a/html/example_laptop.html
+++ b/html/example_laptop.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <title>DIYLaptops: Build ur perfect laptop</title>
-    <meta charset="windows-1251">
+    <title>DIYLaptops: ASUS ROG G55VW</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Build your onw perfect laptop with us!">
-    <meta name="keywords" content="laptop, diy, computer, ноутук, ноут, для работы, ноутбуки на заказ, продам гараж">
+    <meta name="description" content="Подберите ноутбук для самостоятельной сборки вместе с нами">
+	<meta name="keywords" content="ноутбук, сборка ноутбуков, подбор ноутбука, подбор ноутбука по запчастям, список запчастей для ноутбука, запчасти для ноутбука, список запчастей для ноутбука, продам гараж, IDDQD">
     <link href="../images/favicon16.png" rel="shortcut icon" />
     <link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet" />
     <link href="../css/one-laptop.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="../css/cards.css" type="text/css" rel="stylesheet" />
 </head>
-
 <body>
 
     <header>
