--- a/html/found_laptops.html
+++ b/html/found_laptops.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-	<link href="../css/cards.css" type="text/css" rel="stylesheet" />
-	<title>Подходящие вам ноутбуки</title>
-
-	<link href="../images/favicon16.png" rel="shortcut icon" />
+	<title>DIYLaptops: Поиск ноутбуков</title>
+	<link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet" />
 	<link href="../css/header.css" type="text/css" rel="stylesheet" />
+	<link href="../css/cards.css" type="text/css" rel="stylesheet" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Подберите ноутбук для самостоятельной сборки вместе с нами">
+	<meta name="keywords" content="ноутбук, сборка ноутбуков, подбор ноутбука, подбор ноутбука по запчастям, список запчастей для ноутбука, запчасти для ноутбука, список запчастей для ноутбука, продам гараж, IDDQD">
+	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="../images/favicon16.png" type="image/png" sizes="16x16">
+	<link rel="shortcut icon" href="../images/favicon32.png" type="image/png" sizes="32x32">
+	<link rel="shortcut icon" href="../images/favicon96.png" type="image/png" sizes="96x96">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
