--- a/html/index.html
+++ b/html/index.html
@@ -1,34 +1,35 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="ru">
 <head>
+	<title>DIYLaptops: соберите идеальный ноутбук своими руками!</title>
 	<link href="../css/main_styles.css" type="text/css" rel="stylesheet" />
 	<link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet" />
-	<title>DIYLaptops: build your own perfect laptop</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Build your onw perfect laptop with us!">
-	<meta name="keywords" content="laptop, diy, computer, ноутук, ноут, для работы, ноутбуки на заказ, продам гараж">
+	<meta name="description" content="Подберите ноутбук для самостоятельной сборки вместе с нами">
+	<meta name="keywords" content="ноутбук, сборка ноутбуков, подбор ноутбука, подбор ноутбука по запчастям, список запчастей для ноутбука, запчасти для ноутбука, список запчастей для ноутбука, продам гараж, IDDQD">
 	<link rel="shortcut icon" href="../images/favicon16.png" type="image/png" sizes="16x16">
 	<link rel="shortcut icon" href="../images/favicon32.png" type="image/png" sizes="32x32">
 	<link rel="shortcut icon" href="../images/favicon96.png" type="image/png" sizes="96x96">
-
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<meta charset="utf-8">
 </head>
 <body>
 	<header>
-		<div class="nav_panel">			
-				<div class="logo box">
-					<a class="SV box" href="index.html" target="_self"></a>
-					<div class="loog box">						
-						<object class="Logo_img box" type="image/svg+xml" data="../images/logo.svg">
-							<img src="../images/logo.png" />
-						</object>						
-					</div>
-					
-					<div class="Logo_text box">
-						<b>Laptops</b>						
-					</div>					
+		<!-- Навигационная панель -->
+		<div class="nav_panel">
+			<div class="logo box">
+				<a class="SV box" href="index.html" target="_self"></a>
+				<div class="loog box">
+					<object class="Logo_img box" type="image/svg+xml" data="../images/logo.svg">
+						<img src="../images/logo.png" alt="Логотип DIYLaptops" />
+					</object>
 				</div>
-			
+				<div class="Logo_text box">
+					<b>Laptops</b>
+				</div>
+			</div>
+
+			<!-- Навигационное меню -->
 			<div class="topnav" id="myTopnav">
 				<a href="configurer_menu.html" class="nav_text">Конфигуратор</a>
 				<a href="index.html" class="nav_text">Главная страница</a>
@@ -39,21 +40,24 @@
 	</header>
 
 	<main>
+		<!-- Верхняя навигационная панель -->
 		<div class="bnav_panel"></div>
 
+		<!-- Блок с превью -->
 		<div class="previu">
 			<div class="text">
 				<p>Конфигуратор ноутбуков</p>
 				<button class="batton" onclick="document.location='configurer_menu.html'">Подробней</button>
 			</div>
 			<div class="image">
-				<img class="Pimage" src="../images/previu.png" />
+				<img alt="изображение игрового ноутбука" class="Pimage" src="../images/previu.png" />
 			</div>
 		</div>
 
+		<!-- Блок информации о проекте -->
 		<div class="block_info">
 			<div class="info_image">
-				<img class="Pimage" src="../images/info_image.png" />
+				<img alt="изображение игрового ноутбука в синих тонах" class="Pimage" src="../images/info_image.png" />
 			</div>
 			<div class="info_text">
 				<p class="info_h_text">
@@ -64,18 +68,14 @@
 				</p>
 			</div>
 		</div>
-
-
-
 	</main>
 
 	<footer>
-		<img class="icopyrights" src="../images/copyrights.png" />
+		<!-- Информация о копирайте -->
+		<img alt="Копирайт CC" class="icopyrights" src="../images/copyrights.png" />
 		<b>copyrights</b>
 	</footer>
 	<script src='../js/adaptive_navbar.js'></script>
 	<script src='../js/easteregg.js'></script>
 </body>
-
 </html>
-
