--- a/html/copyrights.html
+++ b/html/copyrights.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <title>Интересный факт: 80% пользователей не смотрят на название сайта во вкладке (но это не точно =) )</title>
-    <meta charset="windows-1251">
-    <meta name="description" content="Build your onw perfect laptop with us!">
-    <meta name="keywords" content="laptop, diy, computer, ноутук, ноут, для работы, ноутбуки на заказ, продам гараж">
-    <link href="../images/favicon16.png" rel="shortcut icon" />
     <link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet" />
     <link href="../css/1_page.css" type="text/css" rel="stylesheet" />
     <link href="../css/copyrights.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<title>DIYLaptops: соберите ноутбук своими руками!</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Подберите ноутбук для самостоятельной сборки вместе с нами">
+	<meta name="keywords" content="ноутбук, сборка ноутбуков, подбор ноутбука, подбор ноутбука по запчастям, список запчастей для ноутбука, запчасти для ноутбука, список запчастей для ноутбука, продам гараж, IDDQD">
+	<link rel="shortcut icon" href="../images/favicon16.png" type="image/png" sizes="16x16">
+	<link rel="shortcut icon" href="../images/favicon32.png" type="image/png" sizes="32x32">
+	<link rel="shortcut icon" href="../images/favicon96.png" type="image/png" sizes="96x96">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
