Closing slash on void element removed in index

--- a/html/index.html
+++ b/html/index.html
@@ -50,14 +50,14 @@
 				<button class="batton" onclick="document.location='configurer_menu.html'">Подробней</button>
 			</div>
 			<div class="image">
-				<img alt="изображение игрового ноутбука" class="Pimage" src="../images/previu.png" />
+				<img alt="изображение игрового ноутбука" class="Pimage" src="../images/previu.png">
 			</div>
 		</div>
 
 		<!-- Блок информации о проекте -->
 		<div class="block_info">
 			<div class="info_image">
-				<img alt="изображение игрового ноутбука в синих тонах" class="Pimage" src="../images/info_image.png" />
+				<img alt="изображение игрового ноутбука в синих тонах" class="Pimage" src="../images/info_image.png">
 			</div>
 			<div class="info_text">
 				<p class="info_h_text">
@@ -72,7 +72,7 @@
 
 	<footer>
 		<!-- Информация о копирайте -->
-		<img alt="Копирайт CC" class="icopyrights" src="../images/copyrights.png" />
+		<img alt="Копирайт CC" class="icopyrights" src="../images/copyrights.png">
 		<b>copyrights</b>
 	</footer>
 	<script src='../js/adaptive_navbar.js'></script>
