--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>DIYLaptops: соберите идеальный ноутбук своими руками!</title>
 	<meta charset="utf-8">
-	<link href="../css/main_styles.css" type="text/css" rel="stylesheet" />
-	<link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet" />
+	<link href="../css/main_styles.css" type="text/css" rel="stylesheet">
+	<link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Подберите ноутбук для самостоятельной сборки вместе с нами">
 	<meta name="keywords" content="ноутбук, сборка ноутбуков, подбор ноутбука, подбор ноутбука по запчастям, список запчастей для ноутбука, запчасти для ноутбука, список запчастей для ноутбука, продам гараж, IDDQD">
@@ -21,7 +21,7 @@
 				<a class="SV box" href="index.html" target="_self"></a>
 				<div class="loog box">
 					<object class="Logo_img box" type="image/svg+xml" data="../images/logo.svg">
-						<img src="../images/logo.png" alt="Логотип DIYLaptops" />
+						<img src="../images/logo.png" alt="Логотип DIYLaptops">
 					</object>
 				</div>
 				<div class="Logo_text box">
