--- a/html/index.html
+++ b/html/index.html
@@ -1,81 +1,108 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>DIYLaptops: соберите идеальный ноутбук своими руками!</title>
-	<meta charset="utf-8">
-	<link href="../css/main_styles.css" type="text/css" rel="stylesheet">
-	<link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Подберите ноутбук для самостоятельной сборки вместе с нами">
-	<meta name="keywords" content="ноутбук, сборка ноутбуков, подбор ноутбука, подбор ноутбука по запчастям, список запчастей для ноутбука, запчасти для ноутбука, список запчастей для ноутбука, продам гараж, IDDQD">
-	<link rel="shortcut icon" href="../images/favicon16.png" type="image/png" sizes="16x16">
-	<link rel="shortcut icon" href="../images/favicon32.png" type="image/png" sizes="32x32">
-	<link rel="shortcut icon" href="../images/favicon96.png" type="image/png" sizes="96x96">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8">
+    <title>DIYLaptops: соберите идеальный ноутбук своими руками!</title>
+    <link href="../css/main_styles.css" rel="stylesheet" type="text/css">
+    <link href="../css/topnav-adaptive.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Подберите ноутбук для самостоятельной сборки вместе с нами">
+    <meta name="keywords" content="ноутбук, сборка ноутбуков, подбор ноутбука, подбор ноутбука по запчастям, список запчастей для ноутбука, запчасти для ноутбука, список запчастей для ноутбука, продам гараж, IDDQD">
+    <link rel="icon" href="../images/favicon32.png" type="image/png" sizes="32x32">
 </head>
 <body>
-	<header>
-		<!-- Навигационная панель -->
-		<div class="nav_panel">
-			<div class="logo box">
-				<a class="SV box" href="index.html" target="_self"></a>
-				<div class="loog box">
-					<object class="Logo_img box" type="image/svg+xml" data="../images/logo.svg">
-						<img src="../images/logo.png" alt="Логотип DIYLaptops">
-					</object>
-				</div>
-				<div class="Logo_text box">
-					<b>Laptops</b>
-				</div>
-			</div>
+    <header>
+        <!-- Навигационная панель -->
+        <nav class="nav_panel">
+            <div class="logo box">
+                <a class="SV box" href="index.html" target="_self"></a>
+                <div class="loog box">
+                    <img class="Logo_img box" src="../images/logo.png" alt="Логотип DIYLaptops">
+                </div>
+                <div class="Logo_text box">
+                    <b>Laptops</b>
+                </div>
+            </div>
 
-			<!-- Навигационное меню -->
-			<div class="topnav" id="myTopnav">
-				<a href="configurer_menu.html" class="nav_text">Конфигуратор</a>
-				<a href="index.html" class="nav_text">Главная страница</a>
-				<a href="copyrights.html" class="nav_text">Ссылки</a>
-				<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-			</div>
-		</div>
-	</header>
+            <!-- Навигационное меню -->
+            <div class="topnav" id="myTopnav">
+                <a href="configurer_menu.html" class="nav_text">Конфигуратор</a>
+                <a href="index.html" class="nav_text">Главная страница</a>
+                <a href="copyrights.html" class="nav_text">Ссылки</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+            </div>
+        </nav>
+    </header>
 
-	<main>
-		<!-- Верхняя навигационная панель -->
-		<div class="bnav_panel"></div>
+    <main>
+        <!-- Верхняя навигационная панель -->
+        <div class="bnav_panel"></div>
 
-		<!-- Блок с превью -->
-		<div class="previu">
-			<div class="text">
-				<p>Конфигуратор ноутбуков</p>
-				<button class="batton" onclick="document.location='configurer_menu.html'">Подробней</button>
-			</div>
-			<div class="image">
-				<img alt="изображение игрового ноутбука" class="Pimage" src="../images/previu.png">
-			</div>
-		</div>
+        <!-- Блок с превью -->
+        <section class="previu">
+            <div class="text">
+                <p>Конфигуратор ноутбуков</p>
+                <button class="batton" onclick="document.location='configurer_menu.html'">Подробней</button>
+            </div>
+            <div class="image">
+                <img class="Pimage" src="../images/previu.png" alt="изображение игрового ноутбука">
+            </div>
+        </section>
+
+        <!-- Блок информации о проекте -->
+        <section class="block_info">
+            <div class="info_image">
+                <img class="Pimage" src="../images/info_image.png" alt="изображение игрового ноутбука в синих тонах">
+            </div>
+            <div class="info_text">
+                <h1 class="info_h_text">
+                    О проекте
+                </h1>
+                <p class="inf_main_text">
+                    DIYLaptops – это сайт созданный людьми, которые хотят упростить и облегчить жизнь специалистам, занимающимся ремонтом ноутбуков, а также обычным людям, которые ищут/выбирают себе ноутбук для покупки в магазине или самостоятельной сборки. Приятного дня и пользования! :D
+                </p>
+            </div>
+        </section>
+
+		<!-- Преемущество  сборки -->
+        <section class="block_info">
+            <div class="info_text">
+                <h1 class="info_h_text">
+					Преимущества сборки собственного ноутбука
+                </h1>
+                <p class="inf_main_text">
+                    Сборка ноутбука по запчастям дает уникальную возможность настроить каждый аспект вашего устройства. Выбирайте процессор, видеокарту, объем памяти и другие компоненты согласно вашим потребностям.
+                </p>
+            </div>
+			<div class="info_image">
+                <img class="Pimage" src="https://d3t0tbmlie281e.cloudfront.net/igi/framework/wjbVEn1ODV6oOnHR.huge" alt="изображение разобранного ноутбука">
+            </div>
+        </section>
 
 		<!-- Блок информации о проекте -->
-		<div class="block_info">
-			<div class="info_image">
-				<img alt="изображение игрового ноутбука в синих тонах" class="Pimage" src="../images/info_image.png">
-			</div>
-			<div class="info_text">
-				<p class="info_h_text">
-					О нашем проекте:
-				</p>
-				<p class="inf_main_text">
-					DIYLaptops – это сайт созданный людьми, которые хотят упростить и облегчить жизнь специалистам, занимаюмся ремонтом ноутбуков и так же обычным людям, которые ищут/выбирают себе ноутбук для покупки в магазине или самостоятельной сборки. Приятного дня и пользования! :D
-				</p>
-			</div>
-		</div>
-	</main>
+        <section class="block_info">
+            <div class="info_image">
+                <img class="Pimage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT99z8rjsKWmtLpTN9njZX9VLSZhza9kPkadpy5cDbB7QdvCKW-rwtAZzVm2N9KaXXTLiQ&usqp=CAU">
+            </div>
+            <div class="info_text">
+                <h1 class="info_h_text">
+                    Пошаговые инструкции
+                </h1>
+                <p class="inf_main_text">
+					Наш сайт предлагает пошаговые инструкции и руководства по сборке ноутбука. От выбора выбора модели и до закручивания последнего болтика, наш сайт поможет собрать вам понравившуются модель.
+                </p>
+            </div>
+        </section>
 
-	<footer>
-		<!-- Информация о копирайте -->
-		<img alt="Копирайт CC" class="icopyrights" src="../images/copyrights.png">
-		<b>copyrights</b>
-	</footer>
-	<script src='../js/adaptive_navbar.js'></script>
-	<script src='../js/easteregg.js'></script>
+    </main>
+
+    <footer>
+        <!-- Информация о копирайте -->
+        <img class="icopyrights" src="../images/copyrights.png" alt="Копирайт CC">
+        <b>copyrights</b>
+    </footer>
+    <script src='../js/adaptive_navbar.js'></script>
+    <script src='../js/easteregg.js'></script>
 </body>
 </html>
