yandex counter added

--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,22 @@
     <meta name="description" content="Подберите ноутбук для самостоятельной сборки вместе с нами">
     <meta name="keywords" content="ноутбук, сборка ноутбуков, подбор ноутбука, подбор ноутбука по запчастям, список запчастей для ноутбука, запчасти для ноутбука, список запчастей для ноутбука, продам гараж, IDDQD">
     <link rel="icon" href="../images/favicon32.png" type="image/png" sizes="32x32">
+    <!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+		m[i].l=1*new Date();
+		for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+		k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+		ym(95541926, "init", {
+			clickmap:true,
+			trackLinks:true,
+			accurateTrackBounce:true,
+			webvisor:true
+		});
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/95541926" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </head>
 <body>
     <header>
