yandex counter added

--- a/html/index.html
+++ b/html/index.html
@@ -99,7 +99,7 @@
 		<!-- Блок информации о проекте -->
         <section class="block_info">
             <div class="info_image">
-                <img class="Pimage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT99z8rjsKWmtLpTN9njZX9VLSZhza9kPkadpy5cDbB7QdvCKW-rwtAZzVm2N9KaXXTLiQ&usqp=CAU">
+                <img class="Pimage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT99z8rjsKWmtLpTN9njZX9VLSZhza9kPkadpy5cDbB7QdvCKW-rwtAZzVm2N9KaXXTLiQ&usqp=CAU" alt="сборка ноутбука">
             </div>
             <div class="info_text">
                 <h1 class="info_h_text">
