--- a/html/copyrights.html
+++ b/html/copyrights.html
@@ -1,105 +1,95 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet" />
-    <link href="../css/1_page.css" type="text/css" rel="stylesheet" />
-    <link href="../css/copyrights.css" type="text/css" rel="stylesheet" />
-	<title>DIYLaptops: соберите ноутбук своими руками!</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Подберите ноутбук для самостоятельной сборки вместе с нами">
-	<meta name="keywords" content="ноутбук, сборка ноутбуков, подбор ноутбука, подбор ноутбука по запчастям, список запчастей для ноутбука, запчасти для ноутбука, список запчастей для ноутбука, продам гараж, IDDQD">
-	<link rel="shortcut icon" href="../images/favicon16.png" type="image/png" sizes="16x16">
-	<link rel="shortcut icon" href="../images/favicon32.png" type="image/png" sizes="32x32">
-	<link rel="shortcut icon" href="../images/favicon96.png" type="image/png" sizes="96x96">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-
-<body>
-
-    <header>
-        <div class="nav_panel row">
+   <head>
+      <link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet" />
+      <link href="../css/1_page.css" type="text/css" rel="stylesheet" />
+      <link href="../css/copyrights.css" type="text/css" rel="stylesheet" />
+      <title>DIYLaptops: СЃРѕР±РµСЂРёС‚Рµ РЅРѕСѓС‚Р±СѓРє СЃРІРѕРёРјРё СЂСѓРєР°РјРё!</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="РџРѕРґР±РµСЂРёС‚Рµ РЅРѕСѓС‚Р±СѓРє РґР»СЏ СЃР°РјРѕСЃС‚РѕСЏС‚РµР»СЊРЅРѕР№ СЃР±РѕСЂРєРё РІРјРµСЃС‚Рµ СЃ РЅР°РјРё">
+      <meta name="keywords" content="РЅРѕСѓС‚Р±СѓРє, СЃР±РѕСЂРєР° РЅРѕСѓС‚Р±СѓРєРѕРІ, РїРѕРґР±РѕСЂ РЅРѕСѓС‚Р±СѓРєР°, РїРѕРґР±РѕСЂ РЅРѕСѓС‚Р±СѓРєР° РїРѕ Р·Р°РїС‡Р°СЃС‚СЏРј, СЃРїРёСЃРѕРє Р·Р°РїС‡Р°СЃС‚РµР№ РґР»СЏ РЅРѕСѓС‚Р±СѓРєР°, Р·Р°РїС‡Р°СЃС‚Рё РґР»СЏ РЅРѕСѓС‚Р±СѓРєР°, СЃРїРёСЃРѕРє Р·Р°РїС‡Р°СЃС‚РµР№ РґР»СЏ РЅРѕСѓС‚Р±СѓРєР°, РїСЂРѕРґР°Рј РіР°СЂР°Р¶, IDDQD">
+      <link rel="shortcut icon" href="../images/favicon16.png" type="image/png" sizes="16x16">
+      <link rel="shortcut icon" href="../images/favicon32.png" type="image/png" sizes="32x32">
+      <link rel="shortcut icon" href="../images/favicon96.png" type="image/png" sizes="96x96">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   </head>
+   <body>
+      <header>
+         <div class="nav_panel row">
             <div class="logo box">
-                <a class="SV box" href="index.html" target="_self"></a>
-                <div class="box">
-                    <object class="Logo_img box" type="image/svg+xml" data="../images/logo.svg">
-                        <img src="../images/logo.png" />
-                    </object>
-                </div>
-
-                <div class="Logo_text box">
-                    <b>Laptops</b>
-                </div>
+               <a class="SV box" href="index.html" target="_self"></a>
+               <div class="box">
+                  <object class="Logo_img box" type="image/svg+xml" data="../images/logo.svg">
+                  <img src="../images/logo.png" />
+                  </object>
+               </div>
+               <div class="Logo_text box">
+                  <b>Laptops</b>
+               </div>
             </div>
             <div class="topnav" id="myTopnav">
-                <a href="index.html" class="nav_text">Главная страница</a>
-				<a href="configurer_menu.html" class="nav_text">Конфигуратор</a>
-				<a href="copyrights.html" class="nav_text">Ссылки</a>
-				<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+               <a href="index.html" class="nav_text">Р“Р»Р°РІРЅР°СЏ СЃС‚СЂР°РЅРёС†Р°</a>
+               <a href="configurer_menu.html" class="nav_text">РљРѕРЅС„РёРіСѓСЂР°С‚РѕСЂ</a>
+               <a href="copyrights.html" class="nav_text">РЎСЃС‹Р»РєРё</a>
+               <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
             </div>
-        </div>
-    </header>
-
-    
-    <main>
-        <div class="minfo">
+         </div>
+      </header>
+      <main>
+         <div class="minfo">
             <p>
-                <ul>
-                    Связь с нами:
-                    <li>
-                        <a href="https://vk.com/nech14" class="Links">
-                            ВК
-                        </a>
-                    </li>
-                    <li>
-                        <a href="pristavkaegor03@gmail.com" class="Links">
-                            Электронная почта
-                        </a>
-                    </li>
-                </ul>
-
+            <ul>
+               РЎРІСЏР·СЊ СЃ РЅР°РјРё:
+               <li>
+                  <a href="https://vk.com/nech14" class="Links">
+                  Р’Рљ
+                  </a>
+               </li>
+               <li>
+                  <a href="pristavkaegor03@gmail.com" class="Links">
+                  Р­Р»РµРєС‚СЂРѕРЅРЅР°СЏ РїРѕС‡С‚Р°
+                  </a>
+               </li>
+            </ul>
             </p>
             <p>
-                
-                <a href="https://fonts-online.ru/fonts/mariupol" class="Links">
-                    Шрифт "Мариуполь": Mariupol
-                </a>
+               <a href="https://fonts-online.ru/fonts/mariupol" class="Links">
+               РЁСЂРёС„С‚ "РњР°СЂРёСѓРїРѕР»СЊ": Mariupol
+               </a>
             </p>
             <p>
-                <a href="https://market.yandex.ru/" class="Links">
-                    Торговая площадка Яндекс Маркет
-                </a>
+               <a href="https://market.yandex.ru/" class="Links">
+               РўРѕСЂРіРѕРІР°СЏ РїР»РѕС‰Р°РґРєР° РЇРЅРґРµРєСЃ РњР°СЂРєРµС‚
+               </a>
             </p>
             <p>
-                <a href="acodis.ru" class="Links">
-                   	 	Интернет-магазин запчастей  Acodis
-                </a>
+               <a href="acodis.ru" class="Links">
+               РРЅС‚РµСЂРЅРµС‚-РјР°РіР°Р·РёРЅ Р·Р°РїС‡Р°СЃС‚РµР№  Acodis
+               </a>
             </p>
             <p>	
-                <a href="partsdirect.ru" class="Links">
-                     Интернет-магазин запчастей  Partsdirect
-                </a>
+               <a href="partsdirect.ru" class="Links">
+               РРЅС‚РµСЂРЅРµС‚-РјР°РіР°Р·РёРЅ Р·Р°РїС‡Р°СЃС‚РµР№  Partsdirect
+               </a>
             </p>
             <p>	
-                <a href="accessoires-asus.com" class="Links">
-                    Интернет-магазин Asus accessoires
-                </a>
+               <a href="accessoires-asus.com" class="Links">
+               РРЅС‚РµСЂРЅРµС‚-РјР°РіР°Р·РёРЅ Asus accessoires
+               </a>
             </p>
             <p>	
-                <a href="https://asc-store.ru/" class="Links">
-                    Интернет-магазин Асоциации Сервисных Центров (АСЦ)
-                </a>
+               <a href="https://asc-store.ru/" class="Links">
+               РРЅС‚РµСЂРЅРµС‚-РјР°РіР°Р·РёРЅ РђСЃРѕС†РёР°С†РёРё РЎРµСЂРІРёСЃРЅС‹С… Р¦РµРЅС‚СЂРѕРІ (РђРЎР¦)
+               </a>
             </p>
-			
-			 <p> 
-                <a href="https://vk.com/public192906131" class="Links">
-                   Отдельная благодарность: AirusGames
-                </a>
+            <p> 
+               <a href="https://vk.com/public192906131" class="Links">
+               РћС‚РґРµР»СЊРЅР°СЏ Р±Р»Р°РіРѕРґР°СЂРЅРѕСЃС‚СЊ: AirusGames
+               </a>
             </p>
-        </div>
-    </main>
-
-
-    <script src='../js/adaptive_navbar.js'></script>
-	<script src='../js/easteregg.js'></script>
-</body>
+         </div>
+      </main>
+      <script src='../js/adaptive_navbar.js'></script>
+      <script src='../js/easteregg.js'></script>
+   </body>
 </html>
