--- a/html/example_laptop.html
+++ b/html/example_laptop.html
@@ -1,85 +1,74 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <title>DIYLaptops: ASUS ROG G55VW</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Build your onw perfect laptop with us!">
-    <meta name="description" content="Подберите ноутбук для самостоятельной сборки вместе с нами">
-	<meta name="keywords" content="ноутбук, сборка ноутбуков, подбор ноутбука, подбор ноутбука по запчастям, список запчастей для ноутбука, запчасти для ноутбука, список запчастей для ноутбука, продам гараж, IDDQD">
-    <link href="../images/favicon16.png" rel="shortcut icon" />
-    <link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet" />
-    <link href="../css/one-laptop.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="../css/cards.css" type="text/css" rel="stylesheet" />
-</head>
-<body>
-
-    <header>
-        <div class="nav_panel row">
+   <head>
+      <title>DIYLaptops: ASUS ROG G55VW</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="РџРѕРґР±РµСЂРёС‚Рµ РЅРѕСѓС‚Р±СѓРє РґР»СЏ СЃР°РјРѕСЃС‚РѕСЏС‚РµР»СЊРЅРѕР№ СЃР±РѕСЂРєРё РІРјРµСЃС‚Рµ СЃ РЅР°РјРё">
+      <meta name="keywords" content="РЅРѕСѓС‚Р±СѓРє, СЃР±РѕСЂРєР° РЅРѕСѓС‚Р±СѓРєРѕРІ, РїРѕРґР±РѕСЂ РЅРѕСѓС‚Р±СѓРєР°, РїРѕРґР±РѕСЂ РЅРѕСѓС‚Р±СѓРєР° РїРѕ Р·Р°РїС‡Р°СЃС‚СЏРј, СЃРїРёСЃРѕРє Р·Р°РїС‡Р°СЃС‚РµР№ РґР»СЏ РЅРѕСѓС‚Р±СѓРєР°, Р·Р°РїС‡Р°СЃС‚Рё РґР»СЏ РЅРѕСѓС‚Р±СѓРєР°, СЃРїРёСЃРѕРє Р·Р°РїС‡Р°СЃС‚РµР№ РґР»СЏ РЅРѕСѓС‚Р±СѓРєР°, РїСЂРѕРґР°Рј РіР°СЂР°Р¶, IDDQD">
+      <link href="../images/favicon16.png" rel="shortcut icon" />
+      <link href="../css/topnav-adaptive.css" type="text/css" rel="stylesheet" />
+      <link href="../css/one-laptop.css" type="text/css" rel="stylesheet" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link href="../css/cards.css" type="text/css" rel="stylesheet" />
+   </head>
+   <body>
+      <header>
+         <div class="nav_panel row">
             <div class="logo box">
-                <a class="SV box" href="index.html" target="_self"></a>
-                <div class="box">
-                    <object class="Logo_img box" type="image/svg+xml" data="../images/logo.svg">
-                        <img src="../images/logo.png" />
-                    </object>
-                </div>
-
-                <div class="Logo_text box">
-                    <b>Laptops</b>
-                </div>
+               <a class="SV box" href="index.html" target="_self"></a>
+               <div class="box">
+                  <object class="Logo_img box" type="image/svg+xml" data="../images/logo.svg">
+                  <img src="../images/logo.png" />
+                  </object>
+               </div>
+               <div class="Logo_text box">
+                  <b>Laptops</b>
+               </div>
             </div>
             <div class="topnav" id="myTopnav">
-                <a href="index.html" class="nav_text">Главная страница</a>
-				<a href="configurer_menu.html" class="nav_text">Конфигуратор</a>
-				<a href="copyrights.html" class="nav_text">Ссылки</a>
-				<a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+               <a href="index.html" class="nav_text">Р“Р»Р°РІРЅР°СЏ СЃС‚СЂР°РЅРёС†Р°</a>
+               <a href="configurer_menu.html" class="nav_text">РљРѕРЅС„РёРіСѓСЂР°С‚РѕСЂ</a>
+               <a href="copyrights.html" class="nav_text">РЎСЃС‹Р»РєРё</a>
+               <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
             </div>
-        </div>
-    </header>
-
-    <main>
-        <div class="single">
-
+         </div>
+      </header>
+      <main>
+         <div class="single">
             <div class="container">
-                <div class="col-md-4 single-left">
-                    <div class="thumb-image"> <img src="../images/index/g55vw.jpg" data-imagezoom="true" class="img-responsive" alt=""> </div>
-                </div>
-                <div class="col-md-8 single-right">
-                    <h3 class="title">ASUS ROG G55VW</h3>
-                    <div class="description">
-                        <h5><i><span>Характеристики</span></i></h5>
-                        <p><span>Сокет процессора: FCPGA988</span></p>
-                        <p><span>Процессор распаян:</span> нет</p>
-                        <p><span>Примечание CPU:</span> машина не "понимает" I5 I и II поколений</p>
-                        <p><span>Самый мощный процессор:</span>  <a href="https://ark.intel.com/content/www/ru/ru/ark/products/71096/intel-core-i73940xm-processor-extreme-edition-8m-cache-up-to-3-90-ghz.html"> I7-3940XM</a></p>
-                        <p> </p>
-                        <p><span>Установленная видеокарта:</span> NVIDIA GTX660M</p>
-                        <p><span>Тип видеокарты:</span> Интегрированная</p>
-                        <p><span>Возможность апгрейда видеокарты:</span> Отсутствует</p>
-                        <p><span>Объем видеопамяти:</span> 2Гб GDDR5</p>
-                        <p><span>Частота видеоядра:</span> 835МГц</p>
-                        <p><span>Частота памяти:</span> 2000МГц</p>
-                        <p></p>
-                        <p><span>Диагональ дисплея:</span>15.6"</p>
-                        <p><span>Тип подключения дисплея:</span> LVDS</p>
-                        <p> </p>
-                        <p><span>Вес ноутбука:</span> 4,2 Кг + БП</p>
-                        <p><span>Мощность БП:</span> 200Вт</p>
-                        <p> </p>
-                        <p><span>Прочие примечания:</span> БП можно использовать как кистень; есть саббуфер; крайне маркий топкейс</p>
-                    </div>
-                </div>
-				
-					<button class="partsbutton" onclick="document.location='example_parts.html'">Перейти к списку запчастей</button>
+               <div class="col-md-4 single-left">
+                  <div class="thumb-image"> <img src="../images/index/g55vw.jpg" data-imagezoom="true" class="img-responsive" alt=""> </div>
+               </div>
+               <div class="col-md-8 single-right">
+                  <h3 class="title">ASUS ROG G55VW</h3>
+                  <div class="description">
+                     <h5><i><span>РҐР°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё</span></i></h5>
+                     <p><span>РЎРѕРєРµС‚ РїСЂРѕС†РµСЃСЃРѕСЂР°: FCPGA988</span></p>
+                     <p><span>РџСЂРѕС†РµСЃСЃРѕСЂ СЂР°СЃРїР°СЏРЅ:</span> РЅРµС‚</p>
+                     <p><span>РџСЂРёРјРµС‡Р°РЅРёРµ CPU:</span> РјР°С€РёРЅР° РЅРµ "РїРѕРЅРёРјР°РµС‚" I5 I Рё II РїРѕРєРѕР»РµРЅРёР№</p>
+                     <p><span>РЎР°РјС‹Р№ РјРѕС‰РЅС‹Р№ РїСЂРѕС†РµСЃСЃРѕСЂ:</span>  <a href="https://ark.intel.com/content/www/ru/ru/ark/products/71096/intel-core-i73940xm-processor-extreme-edition-8m-cache-up-to-3-90-ghz.html"> I7-3940XM</a></p>
+                     <p> </p>
+                     <p><span>РЈСЃС‚Р°РЅРѕРІР»РµРЅРЅР°СЏ РІРёРґРµРѕРєР°СЂС‚Р°:</span> NVIDIA GTX660M</p>
+                     <p><span>РўРёРї РІРёРґРµРѕРєР°СЂС‚С‹:</span> РРЅС‚РµРіСЂРёСЂРѕРІР°РЅРЅР°СЏ</p>
+                     <p><span>Р’РѕР·РјРѕР¶РЅРѕСЃС‚СЊ Р°РїРіСЂРµР№РґР° РІРёРґРµРѕРєР°СЂС‚С‹:</span> РћС‚СЃСѓС‚СЃС‚РІСѓРµС‚</p>
+                     <p><span>РћР±СЉРµРј РІРёРґРµРѕРїР°РјСЏС‚Рё:</span> 2Р“Р± GDDR5</p>
+                     <p><span>Р§Р°СЃС‚РѕС‚Р° РІРёРґРµРѕСЏРґСЂР°:</span> 835РњР“С†</p>
+                     <p><span>Р§Р°СЃС‚РѕС‚Р° РїР°РјСЏС‚Рё:</span> 2000РњР“С†</p>
+                     <p></p>
+                     <p><span>Р”РёР°РіРѕРЅР°Р»СЊ РґРёСЃРїР»РµСЏ:</span>15.6"</p>
+                     <p><span>РўРёРї РїРѕРґРєР»СЋС‡РµРЅРёСЏ РґРёСЃРїР»РµСЏ:</span> LVDS</p>
+                     <p> </p>
+                     <p><span>Р’РµСЃ РЅРѕСѓС‚Р±СѓРєР°:</span> 4,2 РљРі + Р‘Рџ</p>
+                     <p><span>РњРѕС‰РЅРѕСЃС‚СЊ Р‘Рџ:</span> 200Р’С‚</p>
+                     <p> </p>
+                     <p><span>РџСЂРѕС‡РёРµ РїСЂРёРјРµС‡Р°РЅРёСЏ:</span> Р‘Рџ РјРѕР¶РЅРѕ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ РєР°Рє РєРёСЃС‚РµРЅСЊ; РµСЃС‚СЊ СЃР°Р±Р±СѓС„РµСЂ; РєСЂР°Р№РЅРµ РјР°СЂРєРёР№ С‚РѕРїРєРµР№СЃ</p>
+                  </div>
+               </div>
+               <button class="partsbutton" onclick="document.location='example_parts.html'">РџРµСЂРµР№С‚Рё Рє СЃРїРёСЃРєСѓ Р·Р°РїС‡Р°СЃС‚РµР№</button>
             </div>
-			</div>
-			
-		
-
-		
-		
-    </main>
-    <script src='../js/adaptive_navbar.js'></script>
-	<script src='../js/easteregg.js'></script>
-</body>
+         </div>
+      </main>
+      <script src='../js/adaptive_navbar.js'></script>
+      <script src='../js/easteregg.js'></script>
+   </body>
 </html>
